--- a/css/Style.css
+++ b/css/Style.css
@@ -14,7 +14,7 @@
 body {
     font-size: 16px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: url(/imagens/background1.jpg);
+    background-image: url(../imagens/background1.jpg);
     background-size: center;
     background-repeat: no-repeat;
 }
@@ -102,7 +102,7 @@ a {
 }
 
 #posts {
-    width: 0 auto;
+    width: center;
 }
 
 .secao {
